<resources>
    <string name="app_name">PressBox Laundry</string>
    <string name="title">PressBox Laundry</string>
    <string name="connecting">Connecting</string>
    <string name="card_number">Card Number</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="signup_butt">Sign Up</string>
    <string name="remember_me">Remember Me</string>
    <string name="name">Name</string>
    <string name="contact_no">Contact Number</string>
    <string name="register">Register</string>
    <string name="title_activity_first_page">FirstPage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="cloth_count">Cloth Count</string>
    <string name="setting">Settings</string>
    <string name="about">Help</string>
    <string name="logout">Logout</string>
    <string name="shirt">Shirts</string>
    <string name="jeans">Jeans</string>
    <string name="tshirts">T-Shirts</string>
    <string name="save">Save</string>
    <string name="undergarment">Undergarments</string>
    <string name="clear_butt">Clear</string>
    <string name="upload">UPLOAD</string>
    <string name="hostel">Hostel</string>
    <string name="contact">Contact</string>
    <string name="imagee">Select an Image</string>
    <string name="title_edit_page">Please upload your profile data</string>
    <string name="profile_help">Please wait for upto 10sec for app to retrieve and show your data</string>
    <string name="cloth_count_help">This option allows the user to store the number of clothes given.
        After Saving your previous data will be automatically updated with new one.</string>
    <string name="setting_count">Allows user to update profile. Change Password. Change Contact No. Delere Account.</string>
</resources>
