<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mask.pressboxlaundry.AboutPage"
    android:background="@color/colorPrimary">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/profile"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="246dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:text="@string/profile_help"
        android:textSize="18sp"
        android:textStyle="normal"
        android:id="@+id/textView9" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView9"
        android:layout_marginTop="58dp"
        android:text="@string/cloth_count"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView10"
        android:text="@string/cloth_count_help"
        android:textSize="18sp"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView11"
        android:layout_marginTop="58dp"
        android:text="@string/setting"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView12"
        android:text="@string/setting_count"
        android:textSize="18sp"
        android:textStyle="normal" />
</RelativeLayout>
