<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mask.pressboxlaundry.EditPage">

    <TextView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="140dp"
        android:ems="8"
        android:padding="5dp"
        android:text="@string/title_edit_page"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/PName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/PName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/edit_text_bg"
        android:ems="12"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/Cardno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Cardno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/edit_text_bg"
        android:padding="5dp"
        android:ems="12"
        android:hint="@string/card_number"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@id/Hostel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PName"/>

    <EditText
        android:id="@+id/Contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/edit_text_bg"
        android:padding="5dp"
        android:ems="12"
        android:hint="@string/contact"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@id/Hostel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Cardno"/>

    <EditText
        android:id="@+id/Hostel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/edit_text_bg"
        android:padding="5dp"
        android:ems="12"
        android:hint="@string/hostel"
        android:inputType="textCapWords"
        app:layout_constraintBottom_toTopOf="@id/Upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Contact"/>

    <Button
        android:id="@+id/Upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_bg"
        android:ems="10"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Hostel"
        android:onClick="saveinfo"/>

    <ProgressBar
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/Prog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</android.support.constraint.ConstraintLayout>