<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mask.pressboxlaundry.LoginPage"
    android:background="@drawable/loginpagebg">

    <EditText
        android:id="@+id/LoginRegister_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="175dp"
        android:background="@drawable/edit_text_bg"
        android:ems="12"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/LoginRegister_Passwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/LoginRegister_Passwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_bg"
        android:ems="12"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginRegister_Email"
        app:layout_constraintBottom_toTopOf="@+id/remember_me"/>

    <Button
        android:id="@+id/LoginRegister_LoginBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_bg"
        android:ems="15"
        android:text="@string/login_button"
        app:layout_constraintBottom_toTopOf="@id/LoginRegister_SignupBut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remember_me"/>

    <Button
        android:id="@+id/LoginRegister_SignupBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="85dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:ems="15"
        android:text="@string/signup_butt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginRegister_LoginBut"/>

    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:ems="12"
        android:text="@string/remember_me"
        android:textColor="#ffffff"
        android:onClick="Remember_Func"
        app:layout_constraintBottom_toTopOf="@+id/LoginRegister_LoginBut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.323"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginRegister_Passwd"/>

    <ProgressBar
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/Prog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</android.support.constraint.ConstraintLayout>
